[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_pipelineselector"
version = "0.1.1"
description = "A component allowing a user to select a pipeline from a drop-down list"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "YOUR NAME", email = "YOUREMAIL@domain.com" }]
keywords = ["gradio-custom-component", "gradio-template-Dropdown", "pyannote.audio", "pyannote", "diarization"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gradio_pipelineselector/templates", "*.pyi", "backend/gradio_pipelineselector/templates", "backend/gradio_pipelineselector/templates", "backend/gradio_pipelineselector/templates", "backend/gradio_pipelineselector/templates", "backend/gradio_pipelineselector/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_pipelineselector"]
