[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gryannote_pipeline"
version = "0.3.0"
description = "A component allowing a user to select a pipeline from a drop-down list"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Clément Pagés", email = "clement.pages@irit.fr" }]
keywords = ["gradio-custom-component", "gradio-template-Dropdown", "pyannote.audio", "pyannote", "diarization"]
# Add dependencies here
dependencies = ["gradio==5.19.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: MIT License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gryannote_pipeline/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gryannote_pipeline"]
