[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gryannote_rttm"
version = "0.1.1"
description = "Component to load, display and download RTTM files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Clément Pagés", email = "clement.pages@irit.fr" }]
keywords = ["gradio-custom-component", "gradio-template-File", "pyannote-audio", "diarization", "rttm", "interactive diarization"]
# Add dependencies here
dependencies = ["gradio>=4.0,<5.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build]
artifacts = ["/backend/gryannote_rttm/templates", "*.pyi"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gryannote_rttm"]
